<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/Form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Registro"
        android:textSize="@dimen/Letter_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginBottom="10dp"
        android:hint="@string/name"
        android:padding="16dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/back"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toStartOf="@id/surnameEditText"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Form" />
    
    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/design_default_color_background"
        app:layout_constraintStart_toStartOf="@id/nameEditText"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        app:layout_constraintTop_toTopOf="@id/nameEditText"/>

    <EditText
        android:id="@+id/surnameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:hint="@string/surname"
        android:padding="16dp"
        android:background="@drawable/back"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/nameEditText"
        app:layout_constraintTop_toBottomOf="@id/Form" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/back"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:padding="16dp"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/nameEditText"
        app:layout_constraintEnd_toEndOf="@id/nameEditText"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="@drawable/back"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:padding="16dp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintStart_toStartOf="@id/emailEditText"
        app:layout_constraintEnd_toEndOf="@id/emailEditText"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:padding="16dp"
        android:background="@drawable/back"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        />

    <Spinner
        android:id="@+id/cityEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:background="@drawable/back"
        android:layout_weight="1"
        android:entries="@array/cities"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@id/phoneEditText"
        app:layout_constraintStart_toStartOf="@id/phoneEditText"
        app:layout_constraintTop_toBottomOf="@id/phoneEditText" />



    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/termsAndCondictionsCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/terms_conditions"
        app:layout_constraintStart_toStartOf="@+id/cityEditText"
        app:layout_constraintTop_toBottomOf="@id/cityEditText"/>

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registrado"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/margin_top"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/margin_top"
        android:layout_marginStart="@dimen/margin_top"
        android:layout_marginEnd="@dimen/margin_top"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>